# scrapbox-wordcloud

./: .gitignore  README.md  config.py.example  extract_noun.py  fetch_contents.py  generate_wordcloud.py  main.py  pyproject.toml  save_to_storage.py
.github/workflows/: ci.yml
