[tool.poetry]
name = "scrapbox-wordcloud"
version = "0.1.0"
description = "API server to generate WordCloud from Scrapbox contents."
authors = ["HosokawaR <thin.river.jp@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scrapbox_wordcloud"}]

[tool.poetry.dependencies]
python = "^3.10"
mecab-python3 = "^1.0.5"
unidic-lite = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
